--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,17 @@ build/Release
 # Commenting this out is preferred by some people, see
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
 node_modules
+bower_components
+
+# Vagrant
+.vagrant
+
+# SASS
+.sass-cache
+.tmp
+
+# Mac
+.DS_Store
 
 # Users Environment Variables
 .lock-wscript
